fix: resolve CORS policy block for Vercel